# coordinator-node-starter

./: .dev.env  .dockerignore  .env  .env.example  .gitignore  .local.env  .prettierrc  .production.env  AGENTS.md  Dockerfile  Makefile  README.md  SKILL.md  SPEC.md  VantaPrompt.md  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  todo.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  (+1 more)
base/: Makefile  SKILL.md
base/challenge/: README.md  SKILL.md  pyproject.toml
base/challenge/.agent/: context.md
base/challenge/starter_challenge/: __init__.py  backtest.py  config.py  tracker.py
base/challenge/starter_challenge/examples/: mean_reversion_tracker.py  trend_following_tracker.py  volatility_regime_tracker.py
base/challenge/tests/: test_examples.py  test_scoring.py  test_tracker.py
condorgame_backend/: README.md
coordinator/: contracts.py
coordinator_core/: __init__.py
coordinator_node/: api_discovery.py  config_loader.py  contract_loader.py  contracts.py  crunch_config.py
coordinator_runtime/: __init__.py  defaults.py
deployment/: .gitignore
docs/: ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  BUILD_YOUR_OWN_CHALLENGE.md  CORE_CONCEPTS.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  ENTITIES.md  FAQ.md  INTRODUCTION.md  ONBOARDING.md  PREDICT_WORKER.md  REPORT_WORKER.md  RUNNING_LOCALLY.md  SCORE_WORKER.md  flow.md  index.md
node_template/: __init__.py  __main__.py  contracts.py
notebooks/: dict_prediction_round_example.json  ensembler.ipynb  simulate.ipynb
packs/: README.md
scripts/: local_build_script.sh  production_build_script.sh  verify_e2e.py  verify_merkle.py
tests/: test_api_auth.py  test_api_discovery.py  test_backfill.py  test_backfill_endpoints.py  test_backfill_jobs.py  test_backtest_harness.py  test_backtest_output_shape.py  test_branding_defaults.py  test_callable_resolver.py  test_checkpoint_worker.py  test_collective_endpoints.py  test_contract_loader.py  test_coordinator_cli_doctor.py  test_coordinator_cli_init.py  test_coordinator_cli_init_service.py  test_coordinator_cli_packs.py  test_coordinator_cli_scaffold_renderer.py  test_coordinator_core_schema.py  test_coordinator_pack_templates.py  test_coordinator_runtime_binance.py  test_coordinator_runtime_data_feeds.py  test_coordinator_runtime_data_feeds_binance_provider.py  test_core_entities.py  test_diversity_feedback.py  test_docs_template_workflow.py  test_e2e_ui_smoke.sh  test_emission_strategies.py  test_ensemble_service.py  test_group_scheduler.py  test_inference_output_visible.py  test_jsonb_schema_contracts.py  test_market_record_storage.py  test_merkle.py  test_metrics_builtins.py  test_metrics_registry.py  test_multi_asset_example.py  test_multi_metric_scoring.py  test_node_template_init_db_config.py  test_node_template_predict_service.py  test_node_template_report_worker.py  (+31 more)
(+335 files in other folders)
