[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "coordinator-node-starter"
version = "0.1.0"
description = "Starter template runtime for Crunch coordinator nodes"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "densitypdf>=0.1.4",
    "fastapi>=0.121.3",
    "model-runner-client>=0.10.0",
    "numpy>=2.3.4",
    "psycopg2-binary>=2.9.11",
    "python-binance>=1.0.19",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]

[project.scripts]
coordinator = "coordinator_cli.commands.main:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["coordinator", "coordinator_cli"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
